# dblib

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  dblib.vala  dblib_mysql.vala  dblib_sqlite.vala  mysql.vapi
tests/: CMakeLists.txt  test_dblib.vala
